# component-system

./: .clang-format  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: linux-build-coverage.yml  linux-build.yml  publish-api-docs.yml
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/src/: abstractcompositesnapin.cpp.func-sort-c.html  abstractcompositesnapin.cpp.func.html  abstractcompositesnapin.cpp.gcov.html  abstractsnapin.cpp.func-sort-c.html  abstractsnapin.cpp.func.html  abstractsnapin.cpp.gcov.html  compositesnapindetailsdialog.cpp.func-sort-c.html  compositesnapindetailsdialog.cpp.func.html  compositesnapindetailsdialog.cpp.gcov.html  factory.h.func-sort-c.html  factory.h.func.html  factory.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  isnapin.h.func-sort-c.html  isnapin.h.func.html  isnapin.h.gcov.html  isnapindetailsdialog.h.func-sort-c.html  isnapindetailsdialog.h.func.html  isnapindetailsdialog.h.gcov.html  isnapinmanager.h.func-sort-c.html  isnapinmanager.h.func.html  isnapinmanager.h.gcov.html  plugin.cpp.func-sort-c.html  plugin.cpp.func.html  plugin.cpp.gcov.html  pluginstorage.cpp.func-sort-c.html  pluginstorage.cpp.func.html  pluginstorage.cpp.gcov.html  pluginstorage.h.func-sort-c.html  pluginstorage.h.func.html  pluginstorage.h.gcov.html  snapindetailsdialog.cpp.func-sort-c.html  snapindetailsdialog.cpp.func.html  snapindetailsdialog.cpp.gcov.html  snapindetailsfactory.h.func-sort-c.html  snapindetailsfactory.h.func.html  snapindetailsfactory.h.gcov.html  snapindetailswidget.cpp.func-sort-c.html  (+11 more)
docs/: component-system.uml
docs/coverage/: index-sort-f.html  index-sort-l.html  index.html
docs/coverage/src/: abstractcompositesnapin.cpp.func-sort-c.html  abstractcompositesnapin.cpp.func.html  abstractcompositesnapin.cpp.gcov.html  abstractsnapin.cpp.func-sort-c.html  abstractsnapin.cpp.func.html  abstractsnapin.cpp.gcov.html  compositesnapindetailsdialog.cpp.func-sort-c.html  compositesnapindetailsdialog.cpp.func.html  compositesnapindetailsdialog.cpp.gcov.html  factory.h.func-sort-c.html  factory.h.func.html  factory.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  isnapin.h.func-sort-c.html  isnapin.h.func.html  isnapin.h.gcov.html  isnapindetailsdialog.h.func-sort-c.html  isnapindetailsdialog.h.func.html  isnapindetailsdialog.h.gcov.html  isnapinmanager.h.func-sort-c.html  isnapinmanager.h.func.html  isnapinmanager.h.gcov.html  plugin.cpp.func-sort-c.html  plugin.cpp.func.html  plugin.cpp.gcov.html  pluginstorage.cpp.func-sort-c.html  pluginstorage.cpp.func.html  pluginstorage.cpp.gcov.html  pluginstorage.h.func-sort-c.html  pluginstorage.h.func.html  pluginstorage.h.gcov.html  snapindetailsdialog.cpp.func-sort-c.html  snapindetailsdialog.cpp.func.html  snapindetailsdialog.cpp.gcov.html  snapindetailsfactory.h.func-sort-c.html  snapindetailsfactory.h.func.html  snapindetailsfactory.h.gcov.html  snapindetailswidget.cpp.func-sort-c.html  (+11 more)
src/: CMakeLists.txt  abstractcompositesnapin.cpp  abstractcompositesnapin.h  abstractsnapin.cpp  abstractsnapin.h  common.h  compositesnapindetailsdailogfactory.h  compositesnapindetailsdialog.cpp  compositesnapindetailsdialog.h  compositesnapindetailsdialog.ui  factory.h  factory.inl  icompositesnapin.h  isnapin.h  isnapindetailsdialog.h  isnapinmanager.h  model.cpp  model.h  plugin.cpp  plugin.h  pluginstorage.cpp  pluginstorage.h  snapindetailsdialog.cpp  snapindetailsdialog.h  snapindetailsdialog.ui  snapindetailsdialogfactory.h  snapindetailsfactory.h  snapindetailsfactorybase.h  snapindetailswidget.cpp  snapindetailswidget.h  snapinloader.cpp  snapinloader.h  snapinmanagementsettings.h  snapinmanagementwidget.cpp  snapinmanagementwidget.h  snapinmanagementwidget.ui  snapinmanager.cpp  snapinmanager.h  snapinmanageradapter.cpp  snapinmanageradapter.h
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/auto/common/: CMakeLists.txt  mockcompositesnapin.h  mocksnapin.h  mocksnapinmanager.h  testcompositesnapin.h  testsnapin.h
tests/auto/compositesnapindetailsdialog/: CMakeLists.txt  compositesnapindetailsdialogtest.cpp  compositesnapindetailsdialogtest.h
tests/auto/factory/: CMakeLists.txt  factorytest.cpp  factorytest.h
tests/auto/plugin/: CMakeLists.txt  plugintest.cpp
tests/auto/pluginstorage/: CMakeLists.txt  pluginstoragetest.cpp  pluginstoragetest.h
tests/auto/snapindetailsdialog/: CMakeLists.txt  snapindetailsdialogtest.cpp  snapindetailsdialogtest.h
tests/auto/snapindetailswidget/: CMakeLists.txt  mocksnapin.h  snapindetailswidgettest.cpp  snapindetailswidgettest.h
tests/auto/snapinloader/: CMakeLists.txt  barplugin.cpp  barsnapin.cpp  barsnapin.h  fooplugin.cpp  foosnapin.cpp  foosnapin.h  snapinloadertest.cpp  snapinloadertest.h
tests/auto/snapinmanagementwidget/: CMakeLists.txt  mocksnapinmanager.h  snapinmanagementwidgettest.cpp  snapinmanagementwidgettest.h  testcompositesnapin.h  testsnapin.h
tests/auto/snapinmanager/: CMakeLists.txt  main.cpp  snapinmanagertest.cpp  snapinmanagertest.h
tests/auto/snapins/: CMakeLists.txt  compositesnapintest.cpp  compositesnapintest.h  snapintest.cpp  snapintest.h
tests/manual/: CMakeLists.txt
tests/manual/management_console/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
